# DataPulse

./: .env.example  .gitignore  README.md  README_old.md  app.py  pyproject.toml
.cursor/rules/: dbt-score-normalization.mdc  git-commit-push.mdc  github-workflow-no-placeholders.mdc  streamlit-auth-pattern.mdc
.github/workflows/: market_intelligence.yml
.streamlit/: config.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: unique_combination_of_columns.sql
docs/: DECISIONS.md  PRODUCT_BRIEF.md  STATUS V17_3.md  STATUS.md  deploy-checklist.md
docs/architecture/: system-overview.md
docs/reports/: 2026-03-22.md  2026-03-23-test-report.md  2026-03-26.md  2026-03-27.md  2026-04-05.md  2026-04-19.md  2026-05-17.md  2026-06-04.md  2026-06-28.md  2026-06-30.md  2026-07-01.md
migrations/: 001_module1_schema.sql  002_onboarding_extras.sql  003_module2_market_intelligence.sql  004_module3_recommendations.sql  005_skill_aliases.sql  006_learning_lab.sql  007_seed_questions.sql  008_study_documentation.sql  009_theory_content.sql  010_security_warnings_cleanup.sql  011_questions_bank_attribution.sql  012_questions_bank_user_insert.sql  013_security_graphql_and_rpc.sql
pages/: 1_Dashboard.py  2_Learning_Lab.py  3_Recommendations.py  4_Reports.py  5_Learn.py  6_Downloads.py
scripts/: ci_commit_report.sh  ci_market_pipeline.sh
src/datapulse/: __init__.py  __main__.py  backfill_skills.py  cli.py  collector.py  config.py  (+13 more)
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_recommender.py  test_skill_aliases.py  test_skills_mapper.py
(+12 files in other folders)
