[project]
name = "datapulse"
version = "0.1.0"
description = "Personal AI career intelligence platform for data analysts and engineers"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "supabase",
    "feedparser",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
