[project]
name = "datapulse"
version = "0.1.0"
description = "Personal AI career intelligence platform for data analysts and engineers"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "supabase",
    "feedparser",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
datapulse = "datapulse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
